version/0.17/_sources/api/solver/_autosummary/settings/groups.rst.txt
:orphan:

.. _groups:

groups
======

.. autoclass:: ansys.fluent.core.solver.settings_232.groups.groups
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`groups_child <groups_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`parts_child <parts_child>`       'child_object_type' of parts.

================================   =================================

