version/0.19/_sources/api/solver/_autosummary/settings/groups.rst.txt
:orphan:

.. _groups:

groups
======

.. autoclass:: ansys.fluent.core.solver.settings_241.groups.groups
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`groups_child <groups_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`parts_child <parts_child>`       'child_object_type' of parts.

================================   =================================

